// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Polkadot Asset Hub Bounties > All bounty failure tests > Bounty cannot be awarded if it has an active child bounty > child bounty added events 1`] = `
[
  {
    "data": "(redacted)",
    "method": "Added",
    "section": "childBounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty failure tests > Bounty cannot be claimed in active state > bounty approved events 1`] = `
[
  {
    "data": {
      "index": "(redacted)",
    },
    "method": "BountyApproved",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty failure tests > Bounty cannot be claimed in active state > bounty became active events 1`] = `
[
  {
    "data": {
      "index": "(redacted)",
    },
    "method": "BountyBecameActive",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty failure tests > Bounty cannot be claimed in active state > bounty proposed events 1`] = `
[
  {
    "data": {
      "index": "(redacted)",
    },
    "method": "BountyProposed",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty failure tests > Bounty cannot be claimed in active state > curator accepted events 1`] = `
[
  {
    "data": {
      "bountyId": "(redacted)",
      "curator": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
    },
    "method": "CuratorAccepted",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty failure tests > Bounty cannot be claimed in active state > curator proposed events 1`] = `
[
  {
    "data": {
      "bountyId": "(redacted)",
      "curator": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
    },
    "method": "CuratorProposed",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty failure tests > Bounty closure in approved state > scheduler events when closing bounty with approved state fails 1`] = `
[
  {
    "data": {
      "id": null,
      "result": {
        "Err": {
          "Module": {
            "error": "0x03000000",
            "index": 65,
          },
        },
      },
      "task": "(redacted)",
    },
    "method": "Dispatched",
    "section": "scheduler",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty failure tests > Bounty closure in pending payout state > scheduler events when closing bounty with pending payout fails 1`] = `
[
  {
    "data": {
      "id": null,
      "result": {
        "Err": {
          "Module": {
            "error": "0x07000000",
            "index": 65,
          },
        },
      },
      "task": "(redacted)",
    },
    "method": "Dispatched",
    "section": "scheduler",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > All curator unassign tests > Unassign curator in Active state by Treasurer > Bounty bond is deposited to the treasury 1`] = `
[
  {
    "data": "(redacted)",
    "method": "Deposit",
    "section": "treasury",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > All curator unassign tests > Unassign curator in Active state by Treasurer > bounty approved events 1`] = `
[
  {
    "data": {
      "index": "(redacted)",
    },
    "method": "BountyApproved",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > All curator unassign tests > Unassign curator in Active state by Treasurer > bounty became active events 1`] = `
[
  {
    "data": {
      "index": "(redacted)",
    },
    "method": "BountyBecameActive",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > All curator unassign tests > Unassign curator in Active state by Treasurer > bounty proposed events 1`] = `
[
  {
    "data": {
      "index": "(redacted)",
    },
    "method": "BountyProposed",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > All curator unassign tests > Unassign curator in Active state by Treasurer > curator accepted events 1`] = `
[
  {
    "data": {
      "bountyId": "(redacted)",
      "curator": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
    },
    "method": "CuratorAccepted",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > All curator unassign tests > Unassign curator in Active state by Treasurer > curator proposed events 1`] = `
[
  {
    "data": {
      "bountyId": "(redacted)",
      "curator": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
    },
    "method": "CuratorProposed",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > All curator unassign tests > Unassign curator in Active state by Treasurer > curator slash event 1`] = `
[
  {
    "data": {
      "amount": 2000000000000,
      "who": "(redacted)",
    },
    "method": "Slashed",
    "section": "balances",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > All curator unassign tests > Unassign curator in Active state by Treasurer > curator unassigned active by treasurer events 1`] = `
[
  {
    "data": {
      "bountyId": "(redacted)",
    },
    "method": "CuratorUnassigned",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > All curator unassign tests > Unassign curator in Active state by curator themselves > bounty approved events 1`] = `
[
  {
    "data": {
      "index": "(redacted)",
    },
    "method": "BountyApproved",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > All curator unassign tests > Unassign curator in Active state by curator themselves > bounty became active events 1`] = `
[
  {
    "data": {
      "index": "(redacted)",
    },
    "method": "BountyBecameActive",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > All curator unassign tests > Unassign curator in Active state by curator themselves > bounty proposed events 1`] = `
[
  {
    "data": {
      "index": "(redacted)",
    },
    "method": "BountyProposed",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > All curator unassign tests > Unassign curator in Active state by curator themselves > curator accepted events 1`] = `
[
  {
    "data": {
      "bountyId": "(redacted)",
      "curator": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
    },
    "method": "CuratorAccepted",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > All curator unassign tests > Unassign curator in Active state by curator themselves > curator proposed events 1`] = `
[
  {
    "data": {
      "bountyId": "(redacted)",
      "curator": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
    },
    "method": "CuratorProposed",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > All curator unassign tests > Unassign curator in Active state by curator themselves > curator unassigned active by curator events 1`] = `
[
  {
    "data": {
      "bountyId": "(redacted)",
    },
    "method": "CuratorUnassigned",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > All curator unassign tests > Unassign curator in ApprovedWithCurator state > curator unassigned approved with curator events 1`] = `
[
  {
    "data": {
      "bountyId": "(redacted)",
    },
    "method": "CuratorUnassigned",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > All curator unassign tests > Unassign curator in CuratorProposed state > bounty approved events 1`] = `
[
  {
    "data": {
      "index": "(redacted)",
    },
    "method": "BountyApproved",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > All curator unassign tests > Unassign curator in CuratorProposed state > bounty became active events 1`] = `
[
  {
    "data": {
      "index": "(redacted)",
    },
    "method": "BountyBecameActive",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > All curator unassign tests > Unassign curator in CuratorProposed state > curator unassigned curator proposed events 1`] = `
[
  {
    "data": {
      "bountyId": "(redacted)",
    },
    "method": "CuratorUnassigned",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > All curator unassign tests > Unassign curator in PendingPayout state > Bounty bond is deposited to the treasury 1`] = `
[
  {
    "data": "(redacted)",
    "method": "Deposit",
    "section": "treasury",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > All curator unassign tests > Unassign curator in PendingPayout state > bounty approved events 1`] = `
[
  {
    "data": {
      "index": "(redacted)",
    },
    "method": "BountyApproved",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > All curator unassign tests > Unassign curator in PendingPayout state > bounty awarded events 1`] = `
[
  {
    "data": {
      "beneficiary": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
      "index": "(redacted)",
    },
    "method": "BountyAwarded",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > All curator unassign tests > Unassign curator in PendingPayout state > bounty became active events 1`] = `
[
  {
    "data": {
      "index": "(redacted)",
    },
    "method": "BountyBecameActive",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > All curator unassign tests > Unassign curator in PendingPayout state > bounty proposed events 1`] = `
[
  {
    "data": {
      "index": "(redacted)",
    },
    "method": "BountyProposed",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > All curator unassign tests > Unassign curator in PendingPayout state > curator accepted events 1`] = `
[
  {
    "data": {
      "bountyId": "(redacted)",
      "curator": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
    },
    "method": "CuratorAccepted",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > All curator unassign tests > Unassign curator in PendingPayout state > curator proposed events 1`] = `
[
  {
    "data": {
      "bountyId": "(redacted)",
      "curator": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
    },
    "method": "CuratorProposed",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > All curator unassign tests > Unassign curator in PendingPayout state > curator slash event 1`] = `
[
  {
    "data": {
      "amount": 2000000000000,
      "who": "(redacted)",
    },
    "method": "Slashed",
    "section": "balances",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > All curator unassign tests > Unassign curator in PendingPayout state > curator unassigned pending payout events 1`] = `
[
  {
    "data": {
      "bountyId": "(redacted)",
    },
    "method": "CuratorUnassigned",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > Bounty Closure Tests > Bounty closure in active state > bounty approved events 1`] = `
[
  {
    "data": {
      "index": "(redacted)",
    },
    "method": "BountyApproved",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > Bounty Closure Tests > Bounty closure in active state > bounty became active events 1`] = `
[
  {
    "data": {
      "index": "(redacted)",
    },
    "method": "BountyBecameActive",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > Bounty Closure Tests > Bounty closure in active state > bounty canceled event 1`] = `
[
  {
    "data": {
      "index": "(redacted)",
    },
    "method": "BountyCanceled",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > Bounty Closure Tests > Bounty closure in active state > curator accepted events 1`] = `
[
  {
    "data": {
      "bountyId": "(redacted)",
      "curator": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
    },
    "method": "CuratorAccepted",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > Bounty Closure Tests > Bounty closure in active state > curator proposed events 1`] = `
[
  {
    "data": {
      "bountyId": "(redacted)",
      "curator": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
    },
    "method": "CuratorProposed",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > Bounty Closure Tests > Bounty closure in funded state > bounty approved events 1`] = `
[
  {
    "data": {
      "index": "(redacted)",
    },
    "method": "BountyApproved",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > Bounty Closure Tests > Bounty closure in funded state > bounty became active events 1`] = `
[
  {
    "data": {
      "index": "(redacted)",
    },
    "method": "BountyBecameActive",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > Bounty Closure Tests > Bounty closure in funded state > bounty canceled events 1`] = `
[
  {
    "data": {
      "index": "(redacted)",
    },
    "method": "BountyCanceled",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > Bounty Closure Tests > Bounty closure in proposed state > bounty rejected events 1`] = `
[
  {
    "data": {
      "bond": "(rounded 22000000)",
      "index": "(redacted)",
    },
    "method": "BountyRejected",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > Bounty Closure Tests > Bounty closure in proposed state > proposer bond slashed event 1`] = `
[
  {
    "data": {
      "amount": "(rounded 22000000)",
      "who": "(redacted)",
    },
    "method": "Slashed",
    "section": "balances",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > Bounty approval tests > Bounty approval flow > bounty approval events 1`] = `
[
  {
    "data": {
      "index": "(redacted)",
    },
    "method": "BountyApproved",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > Bounty approval tests > Bounty approval flow with curator > bounty approval with curator events 1`] = `
[
  {
    "data": {
      "index": "(redacted)",
    },
    "method": "BountyApproved",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > Bounty approval tests > Bounty approval flow with curator > curator proposed events 1`] = `
[
  {
    "data": {
      "bountyId": "(redacted)",
      "curator": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
    },
    "method": "CuratorProposed",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > Bounty awarding and claiming > bounty approved events 1`] = `
[
  {
    "data": {
      "index": "(redacted)",
    },
    "method": "BountyApproved",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > Bounty awarding and claiming > bounty awarded events 1`] = `
[
  {
    "data": {
      "beneficiary": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
      "index": "(redacted)",
    },
    "method": "BountyAwarded",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > Bounty awarding and claiming > bounty became active events 1`] = `
[
  {
    "data": {
      "index": "(redacted)",
    },
    "method": "BountyBecameActive",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > Bounty awarding and claiming > bounty claimed events 1`] = `
[
  {
    "data": {
      "beneficiary": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
      "index": "(redacted)",
      "payout": 90000000000000,
    },
    "method": "BountyClaimed",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > Bounty awarding and claiming > bounty proposed events 1`] = `
[
  {
    "data": {
      "index": "(redacted)",
    },
    "method": "BountyProposed",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > Bounty awarding and claiming > curator accepted events 1`] = `
[
  {
    "data": {
      "bountyId": "(redacted)",
      "curator": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
    },
    "method": "CuratorAccepted",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > Bounty awarding and claiming > curator proposed events 1`] = `
[
  {
    "data": {
      "bountyId": "(redacted)",
      "curator": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
    },
    "method": "CuratorProposed",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > Bounty extension > bounty approved events 1`] = `
[
  {
    "data": {
      "index": "(redacted)",
    },
    "method": "BountyApproved",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > Bounty extension > bounty became active events 1`] = `
[
  {
    "data": {
      "index": "(redacted)",
    },
    "method": "BountyBecameActive",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > Bounty extension > bounty extended events 1`] = `
[
  {
    "data": {
      "index": "(redacted)",
    },
    "method": "BountyExtended",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > Bounty extension > bounty proposed events 1`] = `
[
  {
    "data": {
      "index": "(redacted)",
    },
    "method": "BountyProposed",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > Bounty extension > curator accepted events 1`] = `
[
  {
    "data": {
      "bountyId": "(redacted)",
      "curator": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
    },
    "method": "CuratorAccepted",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > Bounty extension > curator proposed events 1`] = `
[
  {
    "data": {
      "bountyId": "(redacted)",
      "curator": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
    },
    "method": "CuratorProposed",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > Bounty funding tests > Bounty funding for Approved Bounties > bounty approved events 1`] = `
[
  {
    "data": {
      "index": "(redacted)",
    },
    "method": "BountyApproved",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > Bounty funding tests > Bounty funding for Approved Bounties > bounty became active events 1`] = `
[
  {
    "data": {
      "index": "(redacted)",
    },
    "method": "BountyBecameActive",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > Bounty funding tests > Bounty funding for Approved Bounties > bounty proposed events 1`] = `
[
  {
    "data": {
      "index": "(redacted)",
    },
    "method": "BountyProposed",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > Bounty funding tests > Bounty funding for ApprovedWithCurator Bounties > bounty approved events 1`] = `
[
  {
    "data": {
      "index": "(redacted)",
    },
    "method": "BountyApproved",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > Bounty funding tests > Bounty funding for ApprovedWithCurator Bounties > bounty became active events 1`] = `
[
  {
    "data": {
      "index": "(redacted)",
    },
    "method": "BountyBecameActive",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > Bounty funding tests > Bounty funding for ApprovedWithCurator Bounties > bounty proposed events 1`] = `
[
  {
    "data": {
      "index": "(redacted)",
    },
    "method": "BountyProposed",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > Bounty funding tests > Bounty funding for ApprovedWithCurator Bounties > curator proposed events 1`] = `
[
  {
    "data": {
      "bountyId": "(redacted)",
      "curator": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
    },
    "method": "CuratorProposed",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > Creating a bounty > bounty proposal events 1`] = `
[
  {
    "data": {
      "index": "(redacted)",
    },
    "method": "BountyProposed",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > Curator assignment and acceptance > bounty approved events 1`] = `
[
  {
    "data": {
      "index": "(redacted)",
    },
    "method": "BountyApproved",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > Curator assignment and acceptance > bounty became active events 1`] = `
[
  {
    "data": {
      "index": "(redacted)",
    },
    "method": "BountyBecameActive",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > Curator assignment and acceptance > bounty proposed events 1`] = `
[
  {
    "data": {
      "index": "(redacted)",
    },
    "method": "BountyProposed",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > Curator assignment and acceptance > curator accepted events 1`] = `
[
  {
    "data": {
      "bountyId": "(redacted)",
      "curator": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
    },
    "method": "CuratorAccepted",
    "section": "bounties",
  },
]
`;

exports[`Polkadot Asset Hub Bounties > All bounty success tests > Curator assignment and acceptance > curator proposed events 1`] = `
[
  {
    "data": {
      "bountyId": "(redacted)",
      "curator": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
    },
    "method": "CuratorProposed",
    "section": "bounties",
  },
]
`;
